<resources>
    <string name="app_name">Medical</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Main Menu</string>
    <string name="textview">TextView</string>
    <string name="title_activity_signup">Sign-up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_bm_amp_dc_registration_no"><![CDATA[Enter BM&DC Registration No:]]></string>
    <string name="title_activity_doctor_signup">Doctor Sign-up</string>
    <string name="REGISTRATION_NUMBER">registration number</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email_mobile">Email / Mobile</string>
    <string name="sex">Sex</string>
    <string name="speciality">Speciality</string>
    <string name="qualification">Qualification</string>
    <string name="USER_NAME">user name</string>
    <string name="USER_PASSWORD">user password</string>
    <string name="USER_CONTACT">user contact</string>
    <string name="USER_SEX">user sex</string>
    <string name="USER_SPECIAL">user special</string>
    <string name="USER_QUALIFICATION">user qualification</string>
    <string name="other_information">Other Information</string>
    <string name="chamber">Chamber</string>
    <string name="visiting_fee">Visiting Fee</string>
    <string name="add_another">Add Another</string>
    <string name="available_hours">Available Hours</string>
    <string name="available_days">Available days</string>
    <string name="USER_CHAMBER">user chamber</string>
    <string name="USER_DAYS">user days</string>
    <string name="USER_HOURS">user hours</string>
    <string name="USER_FEE">user fee</string>
    <string name="image_information">Image Information</string>
    <string name="select_image">Select Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="mypreference">mypref</string>
    <string name="APP_TOKEN">app_token</string>
    <string name="title_activity_list">Doctors</string>
    <string name="title_activity_doctor_details">Details</string>
    <string name="take_appointment">Take Appointment</string>
    <string name="reg_no">Reg. No</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="age">Age</string>
</resources>
