<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csecu.amrit.medical.doctorSignup.OtherFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="@dimen/spaceTen"
                app:cardElevation="@dimen/spaceFive"
                app:contentPadding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/other_information"
                    android:textAllCaps="true"
                    android:textColor="@color/colorLight"
                    android:textSize="@dimen/headline_font"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spaceTwenty">

                <EditText
                    android:id="@+id/other_etChamber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/chamber"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/other_etDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/available_days"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/other_etHours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/available_hours"
                        android:inputType="textAutoComplete"
                        android:paddingBottom="@dimen/spaceTen"
                        android:paddingTop="@dimen/spaceTen" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/other_btadd"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:elevation="@dimen/spaceFive"
                    android:text="@string/add_another" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/other_etfee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/visiting_fee"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/other_btSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/spaceTen"
                android:clickable="true"
                app:backgroundTint="@android:color/background_dark"
                app:fabSize="mini"
                app:srcCompat="@android:drawable/ic_input_add" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
